@@ -78,6 +78,7 @@ extern MCIERROR __stdcall mciSendStringHookA(__in LPCSTR lpstrCommand, __out_eco
 extern float __stdcall vbaR4VarHook(VARIANTARG* variant);       //The Converter Code
 extern int __stdcall rtcMsgBoxHook(VARIANTARG* msgText, DWORD, DWORD, DWORD, DWORD);        //The Messagebox Hook Code
 extern void __stdcall doEventsLevelEditorHook();        //Reset Level Editor
+extern void __stdcall NPCKillHook(short* npcIndex_ptr, short* unknownVal);
 //Keyboard Hook
 //extern short __stdcall GetKeyState(int vKey);
 //TriggerSMBXEvent cmp function
