@@ -461,7 +461,7 @@ struct NPCMOB {
     short currentSection;                   //+0x146
     float hitCount;                         //+0x148
     short unknown_14C;                      //+0x14C
-    short unknown_14E;                      //+0x14E
+    short pSwitchTransformedBlockID;        //+0x14E
     short unknown_150;                      //+0x150
     short unknown_152;                      //+0x152
     short unknown_154;                      //+0x154
