@@ -2,6 +2,7 @@ v0.7.2.2 BETA:
   * Extended NPC class
   * Bugfix [LunaLua]: Fixed Camera.width and Camera.height
   * Bugfix [LunaLua]: Fixed the bug, where the functions Blocks.get and Blocks.getInterseting don't includes the last block.
+  * Added onNPCKill event
 
 v0.7.2.1 BETA:
   * Extended NPC class
